--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700&display=swap');
 
 :root {
-    --brand: #ff4d29;
+    --brand: #e12125;
     --dark: #092032;
     --body: #516171;
     --border: rgba(0,0,0,0.08);
@@ -22,7 +22,7 @@ h1,h2,h3,h4,h5,h6{
 }
 
 a{
-    color: #dc5f11;
+    color: #e12125;
     text-decoration: none;
     transition: 500ms all;
     font-weight: 700 !important;
@@ -124,6 +124,47 @@ section{
     transition: background-color 0.2s ease;
 }
 
+
+/********************/
+#cajitas_inicio{
+        border-radius: 10px !important;
+    
+        --bs-bg-opacity: 1;
+        background-color: #F0F6FF  !important;
+      
+}
+
+.text-primary-gradient {
+    background: linear-gradient(to bottom right,  var(--brand),var(--brand));
+    -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  }
+
+.bg-primary-gradient {
+    background: linear-gradient(to bottom right,  var(--brand), #f8955c);
+  }
+
+  .bg-secondary-gradient {
+    background: linear-gradient(to bottom right,#f8955c, var(--brand));
+  }
+
+/*************************/
+
+
+hr {
+    border: 0;
+  }
+  hr.divider {
+    height: 0.3rem;
+    max-width: 4rem;
+    margin: 1.5rem auto;
+    background-color:var(--brand);
+    opacity: 1;
+  }
+
+
+
+
 /* BTN */
 
 .btn {
@@ -146,13 +187,72 @@ section{
 /* SLIDDER */
 
 .slide1{
-background: linear-gradient(rgba(9,32,50,0.3),#09203256), url(../img/bg_banner1.jpg);
+    background: linear-gradient(rgba(9,32,50,0.3),#09203256), url(../img/bg_banner1.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+    height: 100vh;
+    position: relative;
 
+    
 }
 
 .slide2{
-    background: linear-gradient(rgba(9,32,50,0.3),#09203256), url(../img/bg_banner2.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.3),#09203256), url(../img/bg_banner2.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+    height: 100vh;
+    position: relative;
+
 }
+
+@media (max-width: 990px) {
+    .slide1,
+    .slide2{
+        width: auto;
+        height: 80vh;
+    }
+}
+@media (max-width: 768px) {
+    .slide1,
+    .slide2{
+        width: auto;
+        height: 80vh;
+    }
+}
+@media (max-width: 650px) {
+    .slide1,
+    .slide2{
+        width: auto;
+        height: 60vh;
+    }
+}
+@media (max-width: 550px) {
+    .slide1,
+    .slide2{
+        width: auto;
+        height: 50vh;
+    }
+}
+@media (max-width: 450px) {
+    .slide1,
+    .slide2{
+        width: auto;
+        height: 40vh;
+    }
+}
+@media (max-width: 350px) {
+    .slide1,
+    .slide2{
+        width: auto;
+        height: 30vh;
+    }
+}
+
+
 
 /* OWL CAROSUEL */
 
@@ -182,6 +282,7 @@ background: linear-gradient(rgba(9,32,50,0.3),#09203256), url(../img/bg_banner1.
     background-color: var(--brand) !important;
 }
 
+
 /* INFOBOX */
 .info-box{
     display: flex;
@@ -195,8 +296,10 @@ background: linear-gradient(rgba(9,32,50,0.3),#09203256), url(../img/bg_banner1.
 /* MILSTONE */
 
 #milestone{
-    background: linear-gradient(#ff4d29de,#ff4d29d2), url(../img/bg_banner2.jpg);
+    background: linear-gradient(#e12125de,#e12125d2);
     color: #ffffff;
+    padding-top: 0px !important;
+    padding-bottom: 20px !important;
 }
 .text-center div{
     font-weight: 600 !important;
@@ -276,7 +379,7 @@ background: linear-gradient(rgba(9,32,50,0.3),#09203256), url(../img/bg_banner1.
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #ff4d29bf;
+    background-color: #e12125;
     transition: all 0.4s ease;
     opacity: 0;
 }
