--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ hr {
 /* MILSTONE */
 
 #milestone{
-    background: linear-gradient(#e12125de,#e12125d2);
+    background: var(--brand);
     color: #ffffff;
     padding-top: 0px !important;
     padding-bottom: 20px !important;
@@ -304,6 +304,8 @@ hr {
 .text-center div{
     font-weight: 600 !important;
 }
+
+
 /* SERVICES */
 
 .services-box{
