--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,26 @@ a{
     font-weight: 700 !important;
 }
 
+.btn{
+    background-color: var(--brand);
+}
+
+.btn-primary {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: var(--brand);
+    --bs-btn-border-color: var(--brand);
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: rgb(255, 109, 109);
+    --bs-btn-hover-border-color: #ff0404;
+    --bs-btn-focus-shadow-rgb: 49,132,253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #ff0404;
+    --bs-btn-active-border-color: #ff0404;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: var(--brand);
+    --bs-btn-disabled-border-color: var(--brand);
+  }
 
 img{
     width: 100%;
