--- a/css/style.css
+++ b/css/style.css
@@ -495,31 +495,6 @@ hr {
 
 /* Footer */
 
-footer{
-    background: linear-gradient(rgba(9,32,50),rgb(9,32,50));
-    padding-top: 80px;
-    text-align: center;
-    padding-bottom: 40px;
-}
-
-footer .navbar-brand{
-    color: #ffffff;
-}
-
-.footer-top{
-    margin-bottom: 40px;
-}
-
-.footer-bottom{
-    border-top: 1px solid rgba(255,255,255,0.3);
-    margin-top: 20px;
-}
-
-footer .footer-top .contianer .social-links a{
-    padding: 1.5vw;
-    font-size: 1.5vw !important;
-}
-
 
 
 .social-icons a {
@@ -582,4 +557,26 @@ footer .footer-top .contianer .social-links a{
         display: none; /* Ocultar los iconos de redes sociales en dispositivos móviles */
     }
 }
+
+
+
+.instagram-container,
+    .facebook-container {
+        position: relative;
+        overflow: hidden;
+        max-width: 100%;
+        padding-bottom: 90%; /* Mantén la relación de aspecto 1:1 */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .instagram-container iframe,
+    .facebook-container iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 
