--- a/css/style.css
+++ b/css/style.css
@@ -4,31 +4,36 @@
     --brand: #e12125;
     --dark: #092032;
     --body: #516171;
-    --border: rgba(0,0,0,0.08);
+    --border: rgba(0, 0, 0, 0.08);
     --shadow: 0px 6px 30px rgba(0, 0, 0, 0.08);
-    
+
 }
 
 
-body{
-    font-family: "barlow",sans-serif;
+body {
+    font-family: "barlow", sans-serif;
     line-height: 1.7;
     color: #516171;
 }
 
-h1,h2,h3,h4,h5,h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-weight: 700 !important;
     color: #092932;
 }
 
-a{
+a {
     color: #e12125;
     text-decoration: none;
     transition: 500ms all;
     font-weight: 700 !important;
 }
 
-.btn{
+.btn {
     background-color: var(--brand);
 }
 
@@ -39,7 +44,7 @@ a{
     --bs-btn-hover-color: #fff;
     --bs-btn-hover-bg: rgb(255, 109, 109);
     --bs-btn-hover-border-color: #ff0404;
-    --bs-btn-focus-shadow-rgb: 49,132,253;
+    --bs-btn-focus-shadow-rgb: 49, 132, 253;
     --bs-btn-active-color: #fff;
     --bs-btn-active-bg: #ff0404;
     --bs-btn-active-border-color: #ff0404;
@@ -47,37 +52,41 @@ a{
     --bs-btn-disabled-color: #fff;
     --bs-btn-disabled-bg: var(--brand);
     --bs-btn-disabled-border-color: var(--brand);
-  }
+}
 
-img{
+img {
     width: 100%;
 }
-ul li a:hover{
-   color: var(--brand) !important;
-   font-weight: 700 !important;
-  
+
+ul li a:hover {
+    color: var(--brand) !important;
+    font-weight: 700 !important;
+
 }
 
-section{
+section {
     padding-top: 80px;
     padding-bottom: 80px;
 }
-.bg-cover{
+
+.bg-cover {
     background-size: cover !important;
     background-position: center !important;
     background-size: cover !important;
-}   
+}
 
-.intro{
+.intro {
     margin-bottom: 40px;
     margin: auto;
-    
+
 }
-.intro h6{
+
+.intro h6 {
     font-weight: 400;
     color: var(--brand);
 }
-.intro p{
+
+.intro p {
     max-width: 500px;
     margin: auto;
 }
@@ -101,10 +110,10 @@ section{
     vertical-align: middle;
 }
 
-.social-links a{
+.social-links a {
     width: 34px;
     height: 34px;
-    background-color: rgba(255,255,255,0.4);
+    background-color: rgba(255, 255, 255, 0.4);
     display: inline-block;
     display: inline-flex;
     align-items: center;
@@ -114,22 +123,22 @@ section{
     border-radius: 100%;
 }
 
-.social-links a:hover{
+.social-links a:hover {
     background-color: #ffffff;
     color: var(--brand);
 }
 
-.navbar{
-    box-shadow: 0px 16px 30px rgba(0,0,0,0.08);
+.navbar {
+    box-shadow: 0px 16px 30px rgba(0, 0, 0, 0.08);
 }
 
-.navbar-brand{
+.navbar-brand {
     font-weight: 700;
     font-size: 26px;
     color: #092932;
 }
 
-.navbar-brand span{
+.navbar-brand span {
     color: var(--brand);
 }
 
@@ -146,41 +155,42 @@ section{
 
 
 /********************/
-#cajitas_inicio{
-        border-radius: 10px !important;
-    
-        --bs-bg-opacity: 1;
-        background-color: #F0F6FF  !important;
-      
+#cajitas_inicio {
+    border-radius: 10px !important;
+
+    --bs-bg-opacity: 1;
+    background-color: #F0F6FF !important;
+
 }
 
 .text-primary-gradient {
-    background: linear-gradient(to bottom right,  var(--brand),var(--brand));
+    background: linear-gradient(to bottom right, var(--brand), var(--brand));
     -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  }
+    -webkit-text-fill-color: transparent;
+}
 
 .bg-primary-gradient {
-    background: linear-gradient(to bottom right,  var(--brand), #f8955c);
-  }
+    background: linear-gradient(to bottom right, var(--brand), #f8955c);
+}
 
-  .bg-secondary-gradient {
-    background: linear-gradient(to bottom right,#f8955c, var(--brand));
-  }
+.bg-secondary-gradient {
+    background: linear-gradient(to bottom right, #f8955c, var(--brand));
+}
 
 /*************************/
 
 
 hr {
     border: 0;
-  }
-  hr.divider {
+}
+
+hr.divider {
     height: 0.3rem;
     max-width: 4rem;
     margin: 1.5rem auto;
-    background-color:var(--brand);
+    background-color: var(--brand);
     opacity: 1;
-  }
+}
 
 
 
@@ -193,21 +203,22 @@ hr {
     transition: 600ms all !important;
 }
 
-.btn-brand{
+.btn-brand {
     background-color: var(--brand);
     color: #ffffff;
     border-color: var(--brand);
 }
-.btn-brand:hover{
+
+.btn-brand:hover {
     background-color: rgb(253, 252, 252);
-    border:1px solid var(--brand);
+    border: 1px solid var(--brand);
     color: var(--brand);
 }
 
 /* SLIDDER */
 
-.slide1{
-    background: linear-gradient(rgba(9,32,50,0.3),#09203256), url(../img/bg_banner1.jpg);
+.slide1 {
+    background: linear-gradient(rgba(9, 32, 50, 0.3), #09203256), url(../img/bg_banner1.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
@@ -215,11 +226,11 @@ hr {
     height: 100vh;
     position: relative;
 
-    
+
 }
 
-.slide2{
-    background: linear-gradient(rgba(0, 0, 0, 0.3),#09203256), url(../img/bg_banner2.jpg);
+.slide2 {
+    background: linear-gradient(rgba(0, 0, 0, 0.3), #09203256), url(../img/bg_banner2.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
@@ -230,43 +241,54 @@ hr {
 }
 
 @media (max-width: 990px) {
+
     .slide1,
-    .slide2{
+    .slide2 {
         width: auto;
         height: 80vh;
     }
 }
+
 @media (max-width: 768px) {
+
     .slide1,
-    .slide2{
+    .slide2 {
         width: auto;
         height: 80vh;
     }
 }
+
 @media (max-width: 650px) {
+
     .slide1,
-    .slide2{
+    .slide2 {
         width: auto;
         height: 60vh;
     }
 }
+
 @media (max-width: 550px) {
+
     .slide1,
-    .slide2{
+    .slide2 {
         width: auto;
         height: 50vh;
     }
 }
+
 @media (max-width: 450px) {
+
     .slide1,
-    .slide2{
+    .slide2 {
         width: auto;
         height: 40vh;
     }
 }
+
 @media (max-width: 350px) {
+
     .slide1,
-    .slide2{
+    .slide2 {
         width: auto;
         height: 30vh;
     }
@@ -277,68 +299,72 @@ hr {
 /* OWL CAROSUEL */
 
 .owl-prev,
-.owl-next{
+.owl-next {
     position: absolute;
     top: 50%;
     width: 60px !important;
     height: 60px !important;
     display: grid;
     place-items: center;
-    background-color: rgba(255,255,255,0.3) !important;
+    background-color: rgba(255, 255, 255, 0.3) !important;
     color: #ffffff !important;
     font-weight: 500 !important;
     font-size: 12px !important;
     border-radius: 2vw !important;
 }
-.owl-prev{
+
+.owl-prev {
     left: 0;
 }
-.owl-next{
+
+.owl-next {
     right: 0%;
 }
 
 .owl-prev:hover,
-.owl-next:hover{
+.owl-next:hover {
     background-color: var(--brand) !important;
 }
 
 
 /* INFOBOX */
-.info-box{
+.info-box {
     display: flex;
     align-items: center;
 }
-.info-box img{
+
+.info-box img {
     width: unset;
     margin-right: 24px;
 }
 
 /* MILSTONE */
 
-#milestone{
+#milestone {
     background: var(--brand);
     color: #ffffff;
     padding-top: 0px !important;
     padding-bottom: 20px !important;
 }
-.text-center div{
+
+.text-center div {
     font-weight: 600 !important;
 }
 
 
 /* SERVICES */
 
-.services-box{
- padding: 32px;
- box-shadow: 0px 16px 30px rgba(0,0,0,0.08);
- text-align: center;
+.services-box {
+    padding: 32px;
+    box-shadow: 0px 16px 30px rgba(0, 0, 0, 0.08);
+    text-align: center;
 }
 
-.services-box img{
+.services-box img {
     width: unset;
 }
 
-.services-box h5{
+.services-box h5 {
     margin-top: 24px;
     margin-bottom: 12px;
 
@@ -346,12 +372,12 @@ hr {
 
 /* PROJECT */
 
-.project{
+.project {
     position: relative;
 }
 
-.project .overlay{
-    background: linear-gradient(to bottom,rgba(9,32,50,0.0),rgb(9,32,50));
+.project .overlay {
+    background: linear-gradient(to bottom, rgba(9, 32, 50, 0.0), rgb(9, 32, 50));
     position: absolute;
     width: 100%;
     height: 340px;
@@ -359,24 +385,26 @@ hr {
     left: 0;
 }
 
-.project .content{
+.project .content {
     position: absolute;
     width: 100%;
     bottom: 0;
     left: 0;
     padding: 32px;
 }
-.project h6{
+
+.project h6 {
     font-size: 14px;
     text-transform: uppercase;
     letter-spacing: 1px;
 }
+
 .project h1,
-.project h6{
+.project h6 {
     color: #ffffff;
 }
 
-.project h6::before{
+.project h6::before {
     content: "";
     height: 2px;
     width: 24px;
@@ -387,15 +415,17 @@ hr {
 }
 
 /* TEAM */
-.team-member{
+.team-member {
     text-align: center;
 }
-.team-member .img-wrapper{
+
+.team-member .img-wrapper {
     position: relative;
     overflow: hidden;
-    
+
 }
-.team-member .overlay{
+
+.team-member .overlay {
     position: absolute;
     top: -10%;
     left: 0;
@@ -405,77 +435,78 @@ hr {
     transition: all 0.4s ease;
     opacity: 0;
 }
-.team-member .social-links{
+
+.team-member .social-links {
     position: absolute;
     top: 60%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     transition: all 0.4s ease;
     opacity: 0;
 
 }
 
-.team-member:hover .overlay{
+.team-member:hover .overlay {
     opacity: 1;
-    top:0;
+    top: 0;
 }
 
-.team-member:hover .social-links{
+.team-member:hover .social-links {
     opacity: 1;
 }
 
-.team-member h5{
+.team-member h5 {
     margin-top: 24px;
 }
 
 /* Reviews */
 
-#reviews{
-    
-    background: linear-gradient(to top, rgba(9,32,50,12),#07192756), url(../img/bg_banner1.jpg);
+#reviews {
+
+    background: linear-gradient(to top, rgba(9, 32, 50, 12), #07192756), url(../img/bg_banner1.jpg);
     background-position: center;
     background-size: cover;
     background-size: 100vh;
     height: 40vw;
 }
 
-.review{
+.review {
     max-width: 800px;
     margin: auto;
     text-align: center;
 }
 
-.review img{
+.review img {
     width: 85px !important;
     border-radius: 900px;
     margin: auto;
 }
 
 .review h4,
-.review p{
+.review p {
     color: #ffffff;
     font-size: 1vw;
 }
 
-.review small{
+.review small {
     color: var(--brand);
 }
 
-.review p{
+.review p {
     margin-top: 28px;
 }
 
-.review h4{
+.review h4 {
     margin-top: 16px;
 }
 
 /* BLOG */
 
-.blog-post{
+.blog-post {
     position: relative;
 }
 
-.blog-post .tag{
+.blog-post .tag {
     padding: 4px 12px;
     background-color: var(--brand);
     color: #ffffff;
@@ -489,7 +520,7 @@ hr {
     color: var(--brand);
 }
 
-.blog-post h4{
+.blog-post h4 {
     margin: 1vw 0;
 }
 
@@ -540,7 +571,8 @@ hr {
 
 @media (max-width: 576px) {
     .navbar-brand img {
-        width: 75%; /* Puedes ajustar este valor según sea necesario */
+        width: 75%;
+        /* Puedes ajustar este valor según sea necesario */
         height: auto;
     }
 
@@ -551,32 +583,77 @@ hr {
     }
 
     .top-nav .row .col-auto {
-        margin-bottom: 0px; /* Espaciado entre los elementos en dispositivos móviles */
+        margin-bottom: 0px;
+        /* Espaciado entre los elementos en dispositivos móviles */
     }
+
     .top-nav .row .social-icons {
-        display: none; /* Ocultar los iconos de redes sociales en dispositivos móviles */
+        display: none;
+        /* Ocultar los iconos de redes sociales en dispositivos móviles */
     }
 }
 
+/* Estilo para el contenedor principal */
+#columnas-contacto .row {
+    margin-top: 20px; /* Espaciado superior */
+}
+
+/* Estilo para las columnas */
+#columnas-contacto.col-lg-3 {
+    background-color: #f8f9fa; /* Color de fondo */
+    border: 1px solid #dee2e6; /* Borde delgado */
+    border-radius: 10px; /* Esquinas redondeadas */
+    padding: 20px; /* Espaciado interno */
+    margin: 10px; /* Margen exterior */
+    transition: background-color 0.3s ease; /* Transición de color de fondo */
+}
+
+/* Estilo para los íconos */
+#columnas-contacto i {
+    font-size: 36px; /* Tamaño del ícono */
+    color: var(--brand); /* Color del ícono */
+}
+
+/* Estilo para los encabezados dentro de las columnas */
+#columnas-contacto h5 {
+    margin-top: 15px; /* Espaciado inferior */
+}
+
+/* Estilo para el párrafo dentro de las columnas */
+#columnas-contacto p {
+    font-size: 16px; /* Tamaño del texto */
+    color: #6c757d; /* Color del texto */
+}
+
+
+.map {
+    padding: 0;
+    margin-bottom: -6px;
+}
+
+.map iframe {
+    width: 100%;
+    height: 380px;
+}
 
 
 .instagram-container,
-    .facebook-container {
-        position: relative;
-        overflow: hidden;
-        max-width: 100%;
-        padding-bottom: 90%; /* Mantén la relación de aspecto 1:1 */
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+.facebook-container {
+    position: relative;
+    overflow: hidden;
+    max-width: 100%;
+    padding-bottom: 90%;
+    /* Mantén la relación de aspecto 1:1 */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-    .instagram-container iframe,
-    .facebook-container iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
-
+.instagram-container iframe,
+.facebook-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
