--- a/css/style.css
+++ b/css/style.css
@@ -657,3 +657,28 @@ hr.divider {
     width: 100%;
     height: 100%;
 }
+
+
+.fc .fc-popover {
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 6px;
+    position: absolute;
+    z-index: 9998;
+}
+
+.tooltip {
+    z-index: 9999;
+
+}
+
+@media (max-width: 767.98px) {
+    .fc .fc-toolbar.fc-header-toolbar {
+        display: block;
+        text-align: center;
+    }
+
+    .fc-header-toolbar .fc-toolbar-chunk {
+        display: block;
+    }
+}
+
+
