--- a/css/style.css
+++ b/css/style.css
@@ -770,3 +770,27 @@ hr.divider {
   .owl-dot:last-child {
     margin-right: 0;
   }
+
+
+
+
+  #backToTopBtn {
+    display: none;
+    position: fixed;
+    bottom: 15px;
+    right: 10px;
+    background-color: var(--brand);
+    color: #ffffff;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%; /* Esto hace que el botón tenga forma de círculo */
+    border: none;
+    cursor: pointer;
+    z-index: 99;
+  }
+  
+  #backToTopBtn i {
+    font-size: 24px;
+    line-height: 40px;
+    text-align: center;
+  }
