--- a/css/style.css
+++ b/css/style.css
@@ -367,6 +367,7 @@ hr.divider {
     color: #ffffff;
     padding-top: 0px !important;
     padding-bottom: 20px !important;
+    margin-bottom : 2rem !important;
 }
 
 .text-center div {
